[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "todowrite"
dynamic = ["version"]
description = "A Python library for managing complex software projects with Goals, Tasks, Concepts, and Commands"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "D Deryl Downey", email = "dderyldowney@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
keywords = ["todo", "task", "project", "management", "api", "goals", "tasks", "concepts", "commands"]
dependencies = [
    "sqlalchemy>=2.0.0",
    "jsonschema>=4.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pyright>=1.1.0",
    "pre-commit>=3.0.0",
    "ruff>=0.7.0",
]
postgres = [
    "psycopg2-binary>=2.9.0",
]

[project.urls]
Homepage = "https://github.com/dderyldowney/todowrite"
Repository = "https://github.com/dderyldowney/todowrite.git"
Documentation = "https://github.com/dderyldowney/todowrite/blob/main/README.md"
"Bug Tracker" = "https://github.com/dderyldowney/todowrite/issues"

[tool.hatch.version]
path = "../VERSION"
pattern = "^(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)$"

[tool.hatch.build.targets.wheel]
packages = ["src/todowrite"]

[tool.hatch.build.targets.sdist]
include = ["src/todowrite"]

# Ruff configuration (linting + formatting + imports + security)
[tool.ruff]
line-length = 79  # Standard Python line length
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "BLE", # flake8-blind-except
    "COM", # flake8-commas
    "DTZ", # flake8-datetimez
    "EM",  # flake8-errmsg
    "EXE", # flake8-executable
    "G",   # flake8-logging-format
    "ICN", # flake8-import-conventions
    "INP", # flake8-no-pep420
    "ISC", # flake8-implicit-str-concat
    "PIE", # flake8-pie
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "T10", # flake8-debugger
    "TID", # flake8-tidy-imports
    "YTT", # flake8-2020
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",    # Use of assert detected
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
    "S105",    # Possible hardcoded password
    "S106",    # Possible hardcoded password
    "S607",    # Starting a process with a shell: possible security issue
    "ARG001",  # Unused function argument
    "ARG002",  # Unused method argument
    "S301",    # pickle can execute arbitrary code
]
"src/todowrite/cli.py" = [
    "S603",    # subprocess call: check for execution of untrusted input
    "S607",    # Starting a process with a shell: possible security issue
]

[tool.ruff.format]
line-length = 79  # Match main configuration
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
reportMissingImports = "error"
reportMissingTypeStubs = "error"
reportUndefinedVariable = "error"
reportUnboundVariable = "error"
reportUnusedImport = "error"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportUnusedVariable = "error"
reportDuplicateImport = "error"
reportOptionalSubscript = "error"
reportOptionalMemberAccess = "error"
reportOptionalCall = "error"
reportOptionalIterable = "error"
reportOptionalContextManager = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedClassDecorator = "error"
reportUntypedBaseClass = "error"
reportUntypedNamedTuple = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryContains = "error"
reportUnnecessaryIsInstance = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryEllipsis = "error"
reportInvalidStubStatement = "error"
reportIncompleteStub = "error"
reportUnsupportedDunderAll = "error"
reportPrivateImportUsage = "error"
reportConstantRedefinition = "error"
reportDeprecated = "error"
reportUnreachable = "error"
reportPossiblyUnboundVariable = "error"
reportPossiblyUndefinedVariable = "error"
reportMissingModuleSource = "error"
reportInvalidTypeForm = "error"
reportPropertyTypeMismatch = "error"
reportUnsupportedOperandType = "error"
reportArgumentType = "error"
reportAssignmentType = "error"
reportReturnType = "error"
reportOperatorIssue = "error"
reportUnnecessaryTypeIgnoreComment = "error"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/todowrite",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
    "-v",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/todowrite"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
