[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "todowrite_web"
dynamic = ["version"]
description = "Web frontend for ToDoWrite - A modern web interface for hierarchical task management"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "D Deryl Downey", email = "dderyldowney@gmail.com"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: User Interfaces",
    "Framework :: FastAPI",
]
keywords = ["todo", "task", "project", "management", "web", "frontend", "fastapi", "react", "ui"]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "todowrite>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pre-commit>=3.0.0",
    "ruff>=0.7.0",
    "httpx>=0.25.0",
    "uv>=0.5.0",
]
postgres = [
    "psycopg2-binary>=2.9.0",
]

[project.urls]
Homepage = "https://github.com/dderyldowney/todowrite"
Repository = "https://github.com/dderyldowney/todowrite.git"
Documentation = "https://github.com/dderyldowney/todowrite/blob/main/README.md"
"Bug Tracker" = "https://github.com/dderyldowney/todowrite/issues"

[tool.hatch.version]
path = "../VERSION"
pattern = "^(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)$"

[tool.hatch.build.targets.wheel]
packages = ["src/todowrite_web"]

[tool.hatch.build.targets.sdist]
include = ["src/todowrite_web"]

# Ruff configuration (linting + formatting + imports + security)
[tool.ruff]
line-length = 88  # Web projects often use slightly longer lines
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
    "S",   # flake8-bandit (security)
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "TCH", # type-checking
    "ANN", # type annotations
]
ignore = [
    "ANN101",  # Missing type annotation for self in method (deprecated)
    "ANN102",  # Missing type annotation for cls in classmethod (deprecated)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",    # Use of assert detected
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
    "S105",    # Possible hardcoded password
    "S106",    # Possible hardcoded password
    "S607",    # Starting a process with a shell: possible security issue
    "ARG001",  # Unused function argument
    "ARG002",  # Unused method argument
    "S301",    # pickle can execute arbitrary code
    "ANN101",  # Missing type annotation for self in method (deprecated)
    "ANN102",  # Missing type annotation for cls in classmethod (deprecated)
    "E501",    # Line too long (existing test files)
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/todowrite_web",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
    "-v",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/todowrite_web"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
